# c-plus-plus

ContactBook/: CMakeLists.txt  ContactBook.cpp  ContactBook.h  main.cpp
Inheritance-maps/: BankAccount.cpp  BankAccount.h  CMakeLists.txt  Makefile  accounts1.csv  accounts2.csv  accounts3.csv  main-working.cpp  main.cpp  part2.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
lab1/: CMakeLists.txt  Lab 1.docx  main.cpp
lab2/: CMakeLists.txt  Dealership.cpp  Dealership.h  Showroom.cpp  Showroom.h  Vehicle.cpp  Vehicle.h  main.cpp
lab3/: ABQ.h  ABS.h  CMakeLists.txt  main.cpp  main2.cpp
lab4/: main.cpp
minesweeper/: Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  Leaderboard.cpp  Leaderboard.h  README.md  Textures.cpp  Textures.h  main.cpp  mainGuy.h
project1/: CMakeLists.txt  LinkedList.h  main.cpp  main.txt.cpp  project1.docx
project2/: Makefile
project2/output/: part13.tga
project2/src/: Image.cpp  Image.h  Pixel.cpp  Pixel.h  Tasks.cpp  Tasks.h  main.cpp
shapes/: CMakeLists.txt  Shape.cpp  Shape.h  main.cpp
